2328 [x264] added AVC level 1b and 5.2
2327 [x264] added "stillimage" to the psy tunings and moved "zerolatency" and "fastdecode" to the misc tab
2326 [File Indexer] enhanced index file selection behavior
2325 [MKV Muxer] improved playback performance with some players (requires MkvMerge 5.9.0+)
2324 [OneClick] avoid muxing into intermediate MKV file in some cases if using a DVD source
2323 [OneClick] set "Force using Key-Frames for chapters marks" even if "Don't encode video" is checked
2322 [OneClick] fixed a problem when aborting during automatic deinterlacing
2321 [OneClick] fixed a problem with multiple subtitle extraction caused by 2318
2320 [OneClick] fixed missing subtile tracks if using intermediate MKV files. Bug #710
2319 [MKV Muxer] enhanced projected file size calculation if using intermediate MKV files
2318 [OneClick] enhanced generation of demux file names
2317 [OneClick] the audio track encode selection will not be disabled anymore
2316 [OneClick] fixed audio delay handling if pgcdemux will be used together with an intermediate MKV file
2315 [OneClick] modified "and open next" behavior
2314 [OneClick] improved muxing into intermediate MKV file if necessary
2313 [OneClick] fixed using wrong chapters file if using an intermediate MKV file with VOB input
2312 [OneClick] avoid muxing into intermediate MKV file if this is not necessary
2311 [OneClick] not correctly extracted subtitle files will be ignored
2310 [OneClick] fixed AVS audio processing. Bug #711
2309 [AVS Script Creator] fixed missing DAR values in the AVS script if using "Clever (TM) anamorphic encoding"


Changelog 2296 --> 2308

Features/Changes:
[AVS Script Creator] removed cropping limit
[MP4 Muxer] allow Nero & Apple Chapters styles muxing for better interoperability with players. Patch by Eli Bildirici (#66)

Enhancements/Fixes:
[AVS Script Creator] added detailed analysis result to the log
[AVS Script Creator] fixed "TDeint (with EDI + BOB)"